# AlchemyClassic

./: .gitattributes  .gitignore  .gitlab-ci.yml  .hgignore  .hgtags  LICENSE  Pipfile  README.md  autobuild.xml  autobuild_vs2012.xml  autobuild_vs2013.xml  simman_is_my_favorite_pony_and-or_deputy.bat
indra/: CMakeLists.txt  alchatcommand.cpp  alchatcommand.h
indra/cmake/: 00-Common.cmake  ALMacros.cmake  APR.cmake  Abseil-CPP.cmake  Audio.cmake  BerkeleyDB.cmake  Boost.cmake  BuildPackagesInfo.cmake  BuildVersion.cmake  CEFPlugin.cmake  CMakeLists.txt  CURL.cmake  CXXFeatureDetection.cmake  CheckPython.cmake  Copy3rdPartyLibs.cmake  DBusGlib.cmake  DeploySharedLibs.cmake  DirectX.cmake  EXPAT.cmake  FMODEX.cmake  FMODSTUDIO.cmake  FindCXX14Features.cmake  FindCXXThreadLocal.cmake  FindHUNSPELL.cmake  FindOpenJPEG.cmake  FindURIPARSER.cmake  FindVCRedist.cmake  FmtLib.cmake  FreeType.cmake  GLEW.cmake  GLEXT.cmake  GLM.cmake  GStreamer010Plugin.cmake  GTest.cmake  GeneratePrecompiledHeader.cmake  Glui.cmake  GoogleMock.cmake  GooglePerfTools.cmake  Hunspell.cmake  ICU4C.cmake  (+40 more)
indra/linux_crash_logger/: CMakeLists.txt  linux_crash_logger.cpp  llcrashloggerlinux.cpp
indra/llappearance/: CMakeLists.txt  llavatarappearance.cpp  llavatarappearance.h  llavatarappearancedefines.cpp  llavatarappearancedefines.h  llavatarjoint.cpp  llavatarjoint.h  llavatarjointmesh.cpp  llavatarjointmesh.h  lldriverparam.cpp  lldriverparam.h  lllocaltextureobject.cpp  lllocaltextureobject.h  llpolymesh.cpp  llpolymesh.h  llpolymorph.cpp  llpolymorph.h  llpolyskeletaldistortion.cpp  llpolyskeletaldistortion.h  lltexglobalcolor.cpp  lltexglobalcolor.h  lltexlayer.cpp  lltexlayer.h  lltexlayerparams.cpp  lltexlayerparams.h  lltexturemanagerbridge.cpp  lltexturemanagerbridge.h  llviewervisualparam.cpp  llviewervisualparam.h  llwearable.cpp  llwearable.h  llwearabledata.cpp  llwearabledata.h  llwearabletype.cpp  llwearabletype.h
indra/llaudio/: CMakeLists.txt  llaudiodecodemgr.cpp  llaudiodecodemgr.h  llaudioengine.cpp  llaudioengine.h  llaudioengine_fmodex.cpp  llaudioengine_fmodstudio.cpp  llaudioengine_fmodstudio.h  llaudioengine_openal.cpp  lllistener.cpp  lllistener.h  lllistener_fmodex.cpp  lllistener_fmodex.h  lllistener_fmodstudio.cpp  lllistener_fmodstudio.h  lllistener_openal.cpp  lllistener_openal.h  llstreamingaudio.h  llstreamingaudio_fmodex.cpp  llstreamingaudio_fmodex.h  llstreamingaudio_fmodstudio.cpp  llstreamingaudio_fmodstudio.h  llvorbisencode.cpp
indra/llcharacter/: CMakeLists.txt  llanimationstates.cpp  llanimationstates.h  llbvhconsts.h  llbvhloader.cpp  llbvhloader.h  llcharacter.cpp  llcharacter.h  lleditingmotion.cpp  lleditingmotion.h  llgesture.cpp  llgesture.h  llhandmotion.cpp  llhandmotion.h  llheadrotmotion.cpp  llheadrotmotion.h  lljoint.cpp  lljoint.h  lljointsolverrp3.cpp  lljointsolverrp3.h  lljointstate.h  llkeyframefallmotion.cpp  llkeyframefallmotion.h  llkeyframemotion.cpp  llkeyframemotion.h  llkeyframemotionparam.cpp  llkeyframemotionparam.h  llkeyframestandmotion.cpp  llkeyframestandmotion.h  llkeyframewalkmotion.cpp  llkeyframewalkmotion.h  llmotion.cpp  llmotion.h  llmotioncontroller.cpp  llmotioncontroller.h  llmultigesture.cpp  llmultigesture.h  llpose.cpp  llpose.h  llstatemachine.h  (+4 more)
indra/llcommon/: CMakeLists.txt  StackWalker.cpp  StackWalker.h  fastdelegate.h  fastdelegatebind.h  indra_constants.cpp  indra_constants.h  is_approx_equal_fraction.h  linden_common.h  llalignedarray.h  llallocator.cpp  llallocator.h  llallocator_heap_profile.cpp  llallocator_heap_profile.h  llapp.cpp  llapp.h  llapr.cpp  llapr.h  llassettype.cpp  llassettype.h  llatomic.h  llavatarname.cpp  llbase32.cpp  llbase64.cpp  llbase64.h  llbitpack.cpp  llbitpack.h  llboost.h  llcallbacklist.cpp  llcallbacklist.h  llcallstack.cpp  llcallstack.h  llcleanup.cpp  llcommon.cpp  llcommon.h  llcommonprecompiled.cpp  llcommonprecompiled.h  llcommonutils.cpp  llcoro_get_id.cpp  llcoros.cpp  (+173 more)
indra/llcorehttp/: CMakeLists.txt  _httpinternal.h  _httplibcurl.cpp  _httplibcurl.h  _httpopcancel.cpp  _httpopcancel.h  _httpoperation.cpp  _httpoperation.h  _httpoprequest.cpp  _httpoprequest.h  _httpopsetget.cpp  _httpopsetget.h  _httpopsetpriority.cpp  _httpopsetpriority.h  _httppolicy.cpp  _httppolicy.h  _httppolicyclass.cpp  _httppolicyclass.h  _httppolicyglobal.cpp  _httppolicyglobal.h  _httpreadyqueue.h  _httpreplyqueue.cpp  _httpreplyqueue.h  _httprequestqueue.cpp  _httprequestqueue.h  _httpservice.cpp  _httpservice.h  _mutex.h  _refcounted.cpp  _refcounted.h  _thread.h  bufferarray.cpp  bufferarray.h  bufferstream.cpp  bufferstream.h  httpcommon.cpp  httpcommon.h  httpheaders.cpp  httpheaders.h  httpoptions.cpp  (+9 more)
indra/llcrashlogger/: CMakeLists.txt  llcrashlock.cpp  llcrashlock.h  llcrashlogger.cpp  llcrashlogger.h
indra/lldarwin/: CMakeLists.txt  llappdelegate-objc.h  llappdelegate-objc.mm  llappviewermacosx-objc.h  llappviewermacosx-objc.mm  lldesktopnotifications-objc.h  lldesktopnotifications-objc.mm  llfilepicker-objc.h  llfilepicker-objc.mm  llopenglview-objc.h  llopenglview-objc.mm  llsys-objc.h  llsys-objc.mm  llvfs-objc.h  llvfs-objc.mm  llwindowmacosx-objc.h  llwindowmacosx-objc.mm
indra/llimage/: CMakeLists.txt  llimage.cpp  llimage.h  llimagebmp.cpp  llimagebmp.h  llimagedimensionsinfo.cpp  llimagedimensionsinfo.h  llimagedxt.cpp  llimagedxt.h  llimagefilter.cpp  llimagej2c.cpp  llimagej2c.h  llimagejpeg.cpp  llimagejpeg.h  llimagepng.cpp  llimagepng.h  llimagetga.cpp  llimagetga.h  llimageworker.cpp  llimageworker.h  llpngwrapper.cpp  llpngwrapper.h
indra/llimagej2coj/: CMakeLists.txt  llimagej2coj.cpp  llimagej2coj.h
indra/llinventory/: CMakeLists.txt  llcategory.cpp  lleconomy.cpp  lleconomy.h  llfoldertype.cpp  llfoldertype.h  llinventory.cpp  llinventory.h  llinventorydefines.cpp  llinventorydefines.h  llinventorytype.cpp  llinventorytype.h  lllandmark.cpp  lllandmark.h  llnotecard.cpp  llparcel.cpp  llparcel.h  llparcelflags.h  llpermissions.cpp  llpermissions.h  llsaleinfo.cpp  llsaleinfo.h  lltransactionflags.cpp  lluserrelations.cpp  lluserrelations.h
(+2819 files in other folders)
